# fistforce

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TERRAIN_PHYSICS_OBJECTIVES.md  fly.toml  run.sh
.github/workflows/: fly-deploy.yml
client/: Cargo.toml
client/assets/: colliders_manifest.ron  servers.ron
client/assets/buildings/: House_01_full.glb  House_02_full.glb  House_03_full.glb  House_04_full.glb  House_09_full.glb  House_10_full.glb  House_12_full.glb  House_13_full.glb  House_16_full.glb  House_17_full.glb  House_18_Full.glb  House_19_full.glb  house_05_full.glb  house_06_full.glb  house_07_full.glb  house_08_full.glb  house_11_full.glb  house_14_full.glb  house_15_full.glb  house_20_full.glb
client/assets/vehicles/: Car.glb
client/src/: audio.rs  build_mode.rs  camera.rs  chest.rs  crosshair.rs  dialogue.rs  input.rs  main.rs  pickup.rs  props.rs  states.rs  structures.rs  terrain.rs  weapon_view.rs  weapons.rs
client/src/systems/: connection.rs  mod.rs  npc.rs  particles.rs  player.rs  rendering.rs  vehicle.rs  world.rs
client/src/ui/: inventory.rs  main_menu.rs  mod.rs  name_entry.rs  pause_menu.rs  styles.rs
server/: Cargo.toml
server/src/: building.rs  colliders.rs  inventory.rs  main.rs  npc.rs  persistence.rs  systems.rs  weapons.rs  world.rs
shared/: Cargo.toml
shared/src/: building.rs  colliders.rs  components.rs  items.rs  lib.rs  movement.rs  npc.rs  physics.rs  player.rs  player_profile.rs  props.rs  protocol.rs  spatial.rs  structures.rs  (+2 more)
tools/: convert_models_to_kaykit.sh  rename_bones_to_kaykit.py
(+5 files in other folders)
